// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar with routeButtons should render with given state from Redux store 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-1"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-4"
    >
      <mock-menudrawer
        open="false"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-2 MuiGrid-grid-md-2"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-2"
              href="/map"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-4 MuiGrid-grid-md-8"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-12"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-11"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-7"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-divider
                classname="NavBar-userMenuDivider-6"
              />
              <mock-menuitem
                classname="NavBar-menuItem-8"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-registerdialog
    open="false"
  />
  <mock-signindialog
    open="false"
  />
</div>
`;

exports[`NavBar without routeButtons should render with given state from Redux store 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-13"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-16"
    >
      <mock-menudrawer
        open="false"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-2 MuiGrid-grid-md-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-link
              classname="NavBar-navBarLink-14"
              href="/map"
            >
              <mock-typography
                color="textPrimary"
                variant="h4"
              >
                Aqua
              </mock-typography>
              <mock-typography
                style="color: rgb(138, 198, 222);"
                variant="h4"
              >
                link
              </mock-typography>
            </mock-link>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-4 MuiGrid-grid-md-8"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            Mock User
            <mock-iconbutton
              classname="NavBar-button-24"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root NavBar-expandIcon-23"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </mock-iconbutton>
            <mock-menu
              classname="NavBar-userMenu-19"
              keepmounted="true"
              menulistprops="[object Object]"
              open="false"
              popoverclasses="[object Object]"
            >
              <mock-divider
                classname="NavBar-userMenuDivider-18"
              />
              <mock-menuitem
                classname="NavBar-menuItem-20"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Logout
                  </div>
                </div>
              </mock-menuitem>
            </mock-menu>
          </mock-box>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-registerdialog
    open="false"
  />
  <mock-signindialog
    open="false"
  />
</div>
`;
